--- a/express-basic/src/views/index.ejs
+++ b/express-basic/src/views/index.ejs
@@ -15,7 +15,32 @@
         <a href="#about">About</a>
       </div>
     <div>
+        <div class="create-user-container">
+            <form action="/create-new-user" method="POST">
+                <div><b>Create a new user:</b></div>
+                <div>
+                    <label>First Name:</label>
+                    <input type="text" name="firstName" />
+                </div>
+                <div>
+                    <label>Last Name:</label>
+                    <input type="text" name="lastName" />
+                </div>
+                <div>
+                    <label>Email:</label>
+                    <input type="email" name="email" />
+                </div>
+                <div>
+                    <label>Address:</label>
+                    <input type="text" name="address" />
+                </div>
+                <div>
+                    <button type="submit" class="btn-submit">Submit</button>
+                </div>
 
+            </form>
+
+        </div>
         <div class="w3-container">
             <h2>List users Table</h2>
 
@@ -41,7 +66,7 @@
                                 <%= dataUser[i].lastName %>
                             </td>
                             <td>
-                                <a href="/detail/user/<%= dataUser[i].id %>" target="_blank">Detail</a>
+                                <a href="/detail/user/<%= dataUser[i].id %>">Detail</a>
                                 <button type="button">Edit</button>
                                 <button type="button">Delete</button>
                             </td>
