--- a/express-basic/src/views/detailUser.ejs
+++ b/express-basic/src/views/detailUser.ejs
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-    <title>Document</title>
+    <title>Detail user</title>
 </head>
 <body>
     <div  class="w3-container">
