update btn back

--- a/express-basic/src/views/detailUser.ejs
+++ b/express-basic/src/views/detailUser.ejs
@@ -29,7 +29,10 @@
                 </tr>
             </tbody>
         </table>
-        <a href="/">Back</a>
+        <br>
+       <form action="/" style="text-align: center;">
+           <button type="submit">Back</button>
+       </form>
     </div>
 </body>
 </html>
