upload single file

--- a/express-basic/src/public/css/index.css
+++ b/express-basic/src/public/css/index.css
@@ -58,3 +58,14 @@ body {
 form {
   display: inline-block;
 }
+.upload-file-container {
+  padding: 15px;
+}
+
+.upload-file-container label {
+  display: block;
+}
+.btn-save {
+  margin-top: 15px;
+  cursor: pointer;
+}
