--- a/express-basic/src/views/uploadFile.ejs
+++ b/express-basic/src/views/uploadFile.ejs
@@ -18,7 +18,7 @@
     <div class="upload-file-container">
         <form method="POST" action="/upload-profile-pic" enctype="multipart/form-data">
             <div>
-                <label>Avatar:</label>
+               <b> <label>Avatar:</label></b>
                 <input type="file" name="profile_pic" />
             </div>
             <div>
@@ -28,7 +28,7 @@
 
         <form method="POST" action="/upload-multiple-images" enctype="multipart/form-data">
             <div>
-                <label>Select multiple images:</label>
+               <b> <label>Select multiple images:</label></b>
                 <input type="file" name="multiple_images" multiple />
             </div>
             <div>
